--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
     "animejs": "^3.2.2",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^7.3.0",
     "three": "^0.162.0"
   },
   "devDependencies": {
@@ -35,6 +38,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.4.14"
+    "vite": "^6.2.2"
   }
 }
